[package]
name = "pine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5.0"
serde_derive = "1.0.130"
toml = "0.5.8"
log = "0.4"
fern =  {version = "0.5", features = ["colored"]}